force-app/main/default/objects/Candidate__c/fields/Ready_for_relocation__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_relocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for relocation</label>
    <type>Checkbox</type>
</CustomField>