force-app/main/default/objects/Candidate__c/fields/Salary_max__c.field-meta.xml
<CustomField>
    <fullName>Salary_max__c</fullName>
    <label>Salary max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>