force-app/main/default/objects/Candidate__c/fields/Salary_min__c.field-meta.xml
<CustomField>
    <fullName>Salary_min__c</fullName>
    <label>Salary min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>