force-app/main/default/objects/Candidate__c/validationRules/Email_is_not_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_is_not_empty</fullName>
    <active>true</active>
    <errorConditionFormula>Email__c  = &apos;&apos;</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Sorry, email cant be empty</errorMessage>
</ValidationRule>