force-app/main/default/objects/Candidate__c/validationRules/Validate_salary.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_salary</fullName>
    <active>true</active>
    <description>Salary max cant be less, then salary min</description>
    <errorConditionFormula>Salary_max__c &lt; Salary_min__c</errorConditionFormula>
    <errorDisplayField>Salary_max__c</errorDisplayField>
    <errorMessage>Salary max cant be less, then salary min</errorMessage>
</ValidationRule>